Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26187

Qt apps (e.g. Qt Assistant) crash if an accessibility tool is running on same machine

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.8.5, 5.0.0
    • 4.8.2, 5.0.0 RC 1
    • None
    • MS Windows Prof. 7
      MS Visual C++ 2010
      MS Windows SDK 7.1
    • ced154500de1dde42033579a7b29494934d8a02d be330d8959dbd1a589a9d46e4ed12b5b16fffbb4

      It seems I just hunted down a bug in Qt that turned out to be a total showstopper for us.

      I am using the (native) Microsoft UI Automation API to control other applications for testing prupose. Using that API I install a Focus Changed Event Handler. If such an event handler is present in the system, Qt applications simply crash if a window is closed that contains a Tab-Widget.

      This can be easily reproduced using standard tools: First start AccEvent.exe (from current MS SDK). Enable option "UIA Event" and disable all event types except FocusChangedEvents. Then start event listening in the tool. Then run Qt Assistant. Open the settings dialog in Qt Assistant. Close the dialog with "Ok". Qt Assistant will crash.

      This also happens to our own application (not only to Qt assistant). Using VC++ debugger I found that the crash happens inside the method QAccessible::queryAccessibleInterface due to an access violation at 0xfeeefeee.

      This is a total showstopper to use since we need UI Automation and Qt applications work fine in parallel!

      Is there a patch? Any workaround? Is it eventually possible to disable accessibility for our Qt application so they will not crash if a UI Automation test tool runs on the same machine?

        For Gerrit Dashboard: QTBUG-26187
        # Subject Branch Project Status CR V

            smd Jan Arve
            silicomancer Bernhard Lindner
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes